fixed background and navbar on mobile

--- a/Personal Website/styles.css
+++ b/Personal Website/styles.css
@@ -12,7 +12,8 @@ body {
     background-image: url("Images/background.png");
     background-size: cover;
     background-attachment: fixed;
-}
+    background-position: center;
+}   
 
 /* Navbar styles */
 
@@ -33,7 +34,7 @@ body {
     align-self: center;
 }
 
-.navbar-link {
+.leftnav > .navbar-link {
     margin: 0 1vw;
 }
 
@@ -67,7 +68,6 @@ body {
 }
 
 .rightnav .navbar-link a{
-    width: fit-content;
     white-space: nowrap;
 }
 
@@ -80,20 +80,28 @@ body {
     align-items: center;
 }
 
+@media only screen and (max-width: 420px){
+    
+    .navbar-link a img{
+        height: 2vh;
+        width: 2vh;
+    }
+
+}
+
 @media only screen and (max-width: 1000px) {
 
     .content {
         flex-direction: column;
         height: fit-content;
-        width: 100vw;
-        align-items: center;
+        width: 100%;
         justify-content: space-around;
         overflow-y: hidden;
     }
 
     .leftcontent {
             width: 40vh !important;
-            margin-top: 3vh;
+            margin-top: 5vh;
     }
 
     .leftcontent > .msg {
@@ -112,14 +120,14 @@ body {
     }
 
     .centercontent {
-        margin-top: 4vh;
+        margin-top: 6vh;
         animation: none !important;
     }
 
     .rightcontent {
         width: 70vw !important;
         height: 70vh !important;
-        margin-top: 6vh;
+        margin-top: 11vh;
     }
 
     .rightcontent > .msg {
@@ -133,11 +141,9 @@ body {
     }
 
     .navbar {
-        width: 100%;
-        padding: 3vw;   
+        max-width: 100vw !important;
+        padding: 3vw !important;
     }
-
-    
 }
 
 .content > div {
